# kei-lang

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: kei-invariant-auditor.md
.claude/hooks/: post-merge-handoff.prompt.md  post-merge-lessons.prompt.md  post-pr-create-review.prompt.md  pre-commit-ci.sh  session-start-learnings.sh
.github/workflows/: ci.yml
crates/kei_lsp/: Cargo.toml
crates/kei_mcp/: Cargo.toml
crates/kei_wasm/: Cargo.toml
crates/kei_wasm/src/: lib.rs
crates/kei_wasm/tests/: smoke.rs
crates/pact_check/: Cargo.toml
crates/pact_check/src/: diagnostic.rs  lib.rs
crates/pact_check/tests/: diagnostic_roundtrip.rs
crates/pact_cli/: Cargo.toml
crates/pact_cli/src/: main.rs
crates/pact_emit/: Cargo.toml
crates/pact_fmt/: Cargo.toml
crates/pact_mcp/: Cargo.toml  build.rs
crates/pact_mcp/src/: embedded.rs  lib.rs  main.rs  server.rs  tools.rs
crates/pact_mcp/tests/: embedding.rs  golden_mcp.rs  stdio_transport.rs
crates/pact_syntax/: Cargo.toml
docs/: effect-postconditions-memo.md  kei-roadmap-goals.md  kei-roadmap-v0.4.md  kei-roadmap-v0.5.md  kei-roadmap-v0.6.md  kei-roadmap-v0.7.md  kei-roadmap-v0.8.md  kei-roadmap-v0.9.md  pact-roadmap-goals.md
docs/dev-notes/: README.md  handoff-candidates.md  lessons-from-reviews.md
docs/dogfood/: 2026-07-03-v0.4.3-membership-and.md  2026-07-04-v0.4.4-catalog-lookup.md  2026-07-05-v0.4.5-reorder-capture.md  2026-07-06-v0.5.0-session-ledger.md  2026-07-07-v0.6.0-slugify-extern.md  2026-07-10-v0.7.0-user-lookup-async.md  2026-07-10-v0.8.0-stock-api-hono.md  2026-07-13-v0.9.0-todo-workers-api.md
editors/vscode/: package-lock.json  package.json
examples/collections/: inventory.kei
examples/contracts/: borrow.kei
examples/workers-api/: .gitignore  README.md  http_health.kei  http_model.kei  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
runtime/: package-lock.json  package.json
runtime/src/: index.ts
skills/kei/: SKILL.md
spec/: diagnostic-schema.md  kei-spec-v0.1.md  kei-spec-v0.2.md  kei-spec-v0.3-collections.md  pact-spec-v0.1.md
spec/errors/: KEI-E2010.md  KEI-E2011.md  KEI-E2012.md  KEI-E4003.md
tests/e2e/: package-lock.json  package.json
tests/mcp/: check_clean.request.json  check_clean.response.json  (+45 more)
(+176 files in other folders)
