[package]
name = "kei_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kei_syntax = { path = "../kei_syntax" }
kei_check = { path = "../kei_check" }
kei_fmt = { path = "../kei_fmt" }
kei_emit = { path = "../kei_emit" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
