[package]
name = "pact_check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact semantic checker: name resolution, types, effects, contracts. Sole definition of Diagnostic."

[dependencies]
pact_syntax = { path = "../pact_syntax" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
