[package]
name = "pact_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `pact` CLI: check / fmt / build / test. No language-processing logic."

[[bin]]
name = "pact"
path = "src/main.rs"

[dependencies]
pact_check = { path = "../pact_check" }
pact_emit = { path = "../pact_emit" }
pact_fmt = { path = "../pact_fmt" }
pact_syntax = { path = "../pact_syntax" }
