[package]
name = "pact_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact MCP server: serves spec/ and examples/ embedded at build time. No language-processing logic."

[[bin]]
name = "pact-mcp"
path = "src/main.rs"

[dependencies]
pact_check = { path = "../pact_check" }
pact_emit = { path = "../pact_emit" }
pact_fmt = { path = "../pact_fmt" }
pact_syntax = { path = "../pact_syntax" }
