[package]
name = "pact_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact MCP server: serves spec/ and examples/ embedded at build time. No language-processing logic."

[lib]
name = "pact_mcp"
path = "src/lib.rs"

[[bin]]
name = "pact-mcp"
path = "src/main.rs"

[dependencies]
pact_check = { path = "../pact_check" }
pact_fmt = { path = "../pact_fmt" }
pact_syntax = { path = "../pact_syntax" }
serde_json = { workspace = true }
